# ReuseIR

./: .clang-tidy  .gitignore  404.html  Cargo.toml  README.md  index.html  index.xml  site.webmanifest  sitemap.xml
.github/workflows/: build-doc.yaml  build.yaml  clang-format.yaml
categories/: index.html  index.xml
dialect/: index.html  index.xml
dialect/code_docs/: index.html  index.xml
dialect/code_docs/ReuseIRCompositeLayoutInterface/: index.html
dialect/code_docs/ReuseIRDialect/: index.html
dialect/code_docs/ReuseIRMangleInterface/: index.html
dialect/code_docs/ReuseIROps/: index.html
dialect/code_docs/ReuseIRPasses/: index.html
dialect/code_docs/ReuseIRTypes/: index.html
frontend/: index.html  index.xml
reuse-frontend/: Cargo.toml
reuse-frontend/src/: concrete.rs  lib.rs  name.rs  syntax.rs
reuse-frontend/src/concrete/: mod.rs  scope.rs
reuse-frontend/src/surface/: mod.rs  tests.rs
reuse-frontend/src/syntax/: mod.rs  surface.rs
reuse-frontend/src/syntax/abstract/: convert.rs  inline.rs  mod.rs  rename.rs
reuse-frontend/src/syntax/concrete/: mod.rs  scope.rs  type.rs
reuse-mlir/: CMakeLists.txt  Cargo.toml  README  build.rs
reuse-mlir/cmake/: FindLLVM.cmake  FindMLIR.cmake
reuse-mlir/contrib/: CMakeLists.txt
reuse-mlir/contrib/cxx-rs/: CMakeLists.txt  README.md
reuse-mlir/contrib/cxx-rs/include/cxx-rs/: cxx.h
reuse-mlir/include/: CAPI.h  CMakeLists.txt
reuse-mlir/include/ReuseIR/: CAPI.h  CMakeLists.txt  Common.h  Passes.h  Passes.td
reuse-mlir/include/ReuseIR/Analysis/: AliasAnalysis.h  AnticipatedAllocation.h  ReuseAnalysis.h
reuse-mlir/include/ReuseIR/Bridge/: AST.h
reuse-mlir/include/ReuseIR/IR/: CMakeLists.txt  ReuseIRAttrs.td  ReuseIRDialect.h  ReuseIRDialect.td  ReuseIROps.h  ReuseIROps.td  ReuseIROpsEnums.h  ReuseIRTypeDetails.h.inc  ReuseIRTypes.h  ReuseIRTypes.td
reuse-mlir/include/ReuseIR/Interfaces/: CMakeLists.txt  ReuseIRCompositeLayoutInterface.h  ReuseIRCompositeLayoutInterface.td  ReuseIRMangleInterface.h  ReuseIRMangleInterface.td
reuse-mlir/src/: lib.rs
reuse-mlir/src/cxx/: CMakeLists.txt
reuse-mlir/src/cxx/Analysis/: AliasAnalysis.cpp  AnticipatedAllocation.cpp  CMakeLists.txt  ReuseAnalysis.cpp
reuse-mlir/src/cxx/CAPI/: CAPI.cpp  CMakeLists.txt
reuse-mlir/src/cxx/IR/: CMakeLists.txt  ReuseIRAttrs.cpp  ReuseIRDialect.cpp  ReuseIROps.cpp  ReuseIROpsEnums.cpp  ReuseIRTypes.cpp
reuse-mlir/src/cxx/Interfaces/: CMakeLists.txt  ReuseIRCompositeLayoutInterface.cpp  ReuseIRMangleInterface.cpp
reuse-mlir/src/cxx/Passes/: AcquireDestroyFusion.cpp  AcquireReleaseFusion.cpp  CMakeLists.txt  ClosureOutlining.cpp  ConvertReuseIRToLLVM.cpp  ExpandControlFlow.cpp  GenFreezableVTable.cpp  InferUnionTag.cpp  PrintReuseAnalysis.cpp  ReuseIRClosureOutlining.cpp  ReuseIRExpandControlFlow.cpp  TokenReuse.cpp
reuse-mlir/src/cxx/Passes/test/: CMakeLists.txt  TestAnticipatedAllocation.cpp
reuse-mlir/src/cxx/Tool/: CMakeLists.txt
reuse-mlir/src/cxx/Tool/reuse-opt/: CMakeLists.txt  main.cpp
reuse-mlir/src/mlir/: mod.rs
reuse-mlir/test/integration/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
reuse-mlir/test/integration/basic/: basic_syntax.mlir  closure_syntax.mlir  composite_rc_creation.mlir  increase_non_frozen.mlir  invalid_acquire_unfrozen.mlir  invalid_borrow_state.mlir  invalid_borrow_type.mlir  invalid_closure_args_number.mlir  invalid_closure_args_type.mlir  invalid_closure_nonnull_return.mlir  invalid_closure_null_return.mlir  invalid_closure_yield_type.mlir  invalid_decrease_freezable.mlir  invalid_increment.mlir  invalid_load_state.mlir  invalid_load_type.mlir  invalid_projection_index.mlir  invalid_projection_kind.mlir  invalid_projection_type.mlir  invalid_reference_in_composite.mlir  invalid_release_return.mlir  invalid_release_token.mlir  invalid_release_unfrozen.mlir  invalid_release_without_return.mlir  invalid_token_size.mlir  invalid_unfrozen_rc_in_composite.mlir  invalid_val2ref_pointee.mlir  invalid_val2ref_state.mlir  list_of_i32.mlir  misaligned_token.mlir  recursive_composite.mlir  region_syntax.mlir
reuse-mlir/test/integration/expansion/: destroy_expansion.mlir  rc_release_expansion.mlir  token_ensure_expansion.mlir  token_free_expansion.mlir
reuse-mlir/test/integration/lowering/: alloc_op_lowering.mlir  allocator_ops_lowering.mlir  borrow_op_lowering.mlir  closure_lowering.mlir  cyclic_list.cc  cyclic_list.mlir  frozen_rc_release_lowering.mlir  inc_op_lowering.mlir  inc_op_lowering.mlir.todo  load_op_lowering.mlir  nullable_lowering.mlir  proj_op_lowering.mlir  region_lowering.mlir  value_to_ref_op_lowering.mlir
reuse-mlir/test/integration/reuse_analysis/: acquire_fusion.mlir  anticipated_allocation.mlir  free_token_at_end.mlir  reuse_across_scf.mlir  reuse_inside_scf.mlir  reuse_stopped_by_call.mlir  straight_line_reuse.mlir  trivial_fusion.mlir
reuse-runtime/: CMakeLists.txt  Cargo.toml  build.rs
reuse-runtime/src/: allocator.cpp  allocator.rs  freezable.rs  lib.rs  panicking.rs
reuse-www/: .gitignore  README.md  config.toml  reuse-www-helper.sh
reuse-www/content/: _index.md
reuse-www/content/dialect/: _index.md
reuse-www/content/frontend/: _index.md
reuse-www/content/runtime/: _index.md
reuse-www/themes/mlir/layouts/partials/: site-header.html
runtime/: index.html  index.xml
tags/: index.html  index.xml
